k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: continue-story
  labels:
    app.kubernetes.io/name: continue-story
